added preview image in meta

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
       name="description"
       content="Frontend programmer"
     />
+    <meta property="og:title" content="Портфолио Дарьи">
+    <meta property="og:description" content="Веб-разработчик, фронтенд, React.">
+    <meta property="og:image" content="https://dariakott.github.io/portfolio_new/preview.jpg">
+    <meta property="og:url" content="https://dariakott.github.io/portfolio_new/">
+    <meta property="og:type" content="website">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
