added new preview image

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
       name="description"
       content="Frontend programmer"
     />
-    <meta property="og:title" content="Портфолио Дарьи">
-    <meta property="og:description" content="Веб-разработчик, фронтенд, React.">
+    <meta property="og:title" content="Daria's Portfolio">
+    <meta property="og:description" content="Front-end developer, React.">
     <meta property="og:image" content="https://dariakott.github.io/portfolio_new/preview.jpg">
     <meta property="og:url" content="https://dariakott.github.io/portfolio_new/">
     <meta property="og:type" content="website">
